apps/kube/rentearth/manifest/axum-rentearth-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: axum-rentearth-route
    namespace: rentearth
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - rentearth.com
        - www.rentearth.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: axum-rentearth-service
                port: 4323
