apps/kube/rentearth/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: supabase-rentearth-route
    namespace: rentearth
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - supabase.rentearth.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: supabase-proxy
                port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: irc-rentearth-route
    namespace: rentearth
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - irc.rentearth.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: irc-proxy
                port: 8067
